--- a/workflow.Rmd
+++ b/workflow.Rmd
@@ -154,9 +154,24 @@ vmt_summary <- lf_flow %>%
 
 lf_flowPOT <- lf_flow
 lf_flowPOT$flow[is.na(lf_flowPOT$flow)] <- -9999
-peaks <- ilaprosUtils::extractPeaks(vecObs=lf_flowPOT$flow, mintimeDiff=7)
-pot_raw <- lf_flow[((lf_flow$flow > lf_flow$threshold) & (peaks==1)), ]
-readr::write_csv(pot_raw, paste0("./Data/POT_raw_", Station , "_", Agency, ".csv"))
+extractPeaks <- function(flow, mintimeDiff = 7) {
+  peaks <- c()
+  last_peak <- -Inf
+  for (i in 2:(length(flow) - 1)) {
+    if (flow[i] > flow[i - 1] && flow[i] > flow[i + 1]) {
+      if (i - last_peak >= mintimeDiff) {
+        peaks <- c(peaks, i)
+        last_peak <- i
+      }
+    }
+  }
+  return(peaks)
+}
+peaks <- extractPeaks(lf_flowPOT$flow, mintimeDiff = 7)
+# Filter rows where flow > threshold and index is in peaks
+pot_raw <- lf_flow[(lf_flow$flow > lf_flow$threshold) & (seq_along(lf_flow$flow) %in% peaks), ]
+# Save to CSV
+readr::write_csv(pot_raw, paste0("./Data/POT_raw_", Station, "_", Agency, ".csv"))
 ```
 
 Here we plot the POTs for the whole time series, and a zoomed-in version which more clearly shows the high flow thresholds.
